--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,10 @@
 {
-  "name": "OLX Paraguai",
-  "short_name": "OLXP",
+  "name": "PWA Teste",
+  "short_name": "PWA Teste",
   "icons": [
     {
       "src": "assets/img/29.png",
       "sizes": "29x29",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/img/144.png",
-      "sizes": "144x144",
       "type": "image/png"
     },
     {
@@ -23,28 +18,48 @@
       "type": "image/png"
     },
     {
-      "src": "assets/img/180.png",
-      "sizes": "180x180",
+      "src": "assets/img/58.png",
+      "sizes": "58x58",
       "type": "image/png"
     },
     {
-      "src": "assets/img/1024.png",
-      "sizes": "192x192",
-      "type": "image/png",
-	  "purpose": "any maskable"
-    },
-    {
-      "src": "assets/img/58.png",
-      "sizes": "58x58",
+      "src": "assets/img/60.png",
+      "sizes": "60x60",
       "type": "image/png"
     },
     {
       "src": "assets/img/80.png",
       "sizes": "80x80",
       "type": "image/png"
+    },
+    {
+      "src": "assets/img/87.png",
+      "sizes": "87x87",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/1024.png",
+      "sizes": "1024x1024",
+      "type": "image/png",
+	  "purpose": "any maskable"
     }
   ],
-  "start_url": "https://mobile-project-senac.netlify.app",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#31506F",
   "theme_color": "#4D5360"
